--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/springbootdb 
+spring.datasource.url= jdbc:postgresql://localhost:5432/carparts
 spring.datasource.username=postgres
-spring.datasource.password=postgres@123
+spring.datasource.password=postgres
+
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.datasource.initialization-mode=always
