--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#Spring Data JPA
 spring.datasource.url= jdbc:postgresql://localhost:5432/carparts
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -8,3 +9,6 @@ spring.datasource.initialization-mode=always
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#Swagger
+logging.level.io.swagger.models.parameters.AbstractSerializableParameter=error
