Added AOP pointcuts and common changes around lombok

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #Swagger
 logging.level.io.swagger.models.parameters.AbstractSerializableParameter=error
+
+#Actuator
+management.endpoints.web.exposure.include=*
